[package]
name = "guessing"
description = "Guess the secret number and you win!"
homepage = "https://game.ahmetcanisik.com/guessing"
repository = "https://github.com/ahmetcanisik/learning-rust/tree/main/projects/guessing"
keywords = ["guess", "guessing_game", "guessing", "game", "terminal_game"]
categories = ["games"]
readme = "README.md"
license = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
